--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="container px-4 py-5" id="featured-3">
   <h2 class="pb-2 border-bottom">Why Move With Us?</h2>
   <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-    <div class="feature col">
+    <div class="feature col mb-5">
       <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
         <img src="./briefcase.svg" alt="briefcase logo" height="30">
       </div>
@@ -111,7 +111,7 @@
         <img src="./chevron-right.svg" alt="chevron-right">
       </a>
     </div>
-    <div class="feature col">
+    <div class="feature col mb-5">
       <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
         <img src="./bus-front.svg" alt="bus-front-icon" height="30">
       </div>
@@ -123,7 +123,7 @@
         <img src="./chevron-right.svg" alt="chevron-right">
       </a>
     </div>
-    <div class="feature col">
+    <div class="feature col mb-5">
       <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
         <img src="./chat-square-heart.svg" alt="chat-square-heart" height="30">
       </div>
@@ -170,7 +170,7 @@
 
 <!-- footer -->
 <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5">
     <p class="col-md-4 mb-0 text-body-secondary">© 2023 Company, Inc</p>
 
     <a href="./index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
